--- a/training_config/qa/multi_choice/openbookqa/knowreader_v1_mc_qa_multi_source_cn5omcs.json
+++ b/training_config/qa/multi_choice/openbookqa/knowreader_v1_mc_qa_multi_source_cn5omcs.json
@@ -17,7 +17,8 @@
             "end_tokens": ["@end@"]
         }
     },
-    "corpus": "http://pip-package.dev.ai2/corpora/cn5_omcs.txt"
+    "corpora": ["http://pip-package.dev.ai2/corpora/cn5_omcs.txt"],
+    "retrieval": "tushar"
   },
   "train_data_path": "data/OpenBookQA-V1-Sep2018/Data/Main/train.jsonl",
   "validation_data_path": "data/OpenBookQA-V1-Sep2018/Data/Main/dev.jsonl",
