--- a/training_config/qa/multi_choice/openbookqa/knowreader_v1_mc_qa_multi_source_openbook_plus_cn5wordnet.json
+++ b/training_config/qa/multi_choice/openbookqa/knowreader_v1_mc_qa_multi_source_openbook_plus_cn5wordnet.json
@@ -23,9 +23,9 @@
     ],
     "retrieval": "tushar"
   },
-  "train_data_path": "data/OpenBookQA-V1-Sep2018/Data/Main/train.jsonl",
-  "validation_data_path": "data/OpenBookQA-V1-Sep2018/Data/Main/dev.jsonl",
-  "test_data_path": "data/OpenBookQA-V1-Sep2018/Data/Main/test.jsonl",
+  "train_data_path": "http://pip-package.dev.ai2/questions/OpenBookQA/train.jsonl",
+  "validation_data_path": "http://pip-package.dev.ai2/questions/OpenBookQA/dev.jsonl",
+  "test_data_path": "http://pip-package.dev.ai2/questions/OpenBookQA/test.jsonl",
   "evaluate_on_test": true,
   "model": {
     "type": "qa_multi_choice_know_reader_v1",
